# ASCII_Art_Generator_Cna

./: .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  debug_mango.py  gen_image_only.py  pyproject.toml  requirements.txt  test_installation.py  test_output.txt
ascii_gen/: __init__.py  advanced_preprocessing.py  aiss.py  charsets.py  cnn_mapper.py  composition_handler.py  diff_render.py  enhanced_mapper.py  enhanced_training.py  exporter.py  generator.py  gradient_mapper.py  grammar_validator.py  llm_rewriter.py  metrics.py  model_converter.py  multimodal.py  online_generator.py  perceptual.py  pipeline.py  preprocessing.py  production_training.py  prompt_engineering.py  random_forest.py  result.py
ascii_gen/training/: INSTRUCTIONS.md  dataset_generator.py
ascii_training_data/: cave_2.txt  dungeon_15.txt
config/: train_flux_ascii.yaml
docs/: API.md
notebooks/: 01_experimentation.ipynb  02_prompt_to_ascii.ipynb  03_online_prompt_to_ascii.ipynb  kaggle_ascii_training.py  kaggle_pre_ascii_lora.py  train_flux_lora.ipynb  train_on_colab.ipynb
outputs/: example_house.txt  example_star.txt  research_report_2025.md
scripts/: cli.py  convert_image_only.py  debug_dataset.py  generate_test_image.py  prepare_dataset.py  train_lora_local.py
tests/: compare_mappers.py  compare_vit_resnet.py  fast_model_comparison.py  full_pipeline_stress_test.py  quality_metrics.py  repro_composition.py  repro_poses.py  show_improvements.py  stress_test_direct.py  stress_test_suite.py  test_all_mappers.py  test_cat_chase.py  test_dataset_alignment.py  test_export.py  test_innovative_stress.py  test_prompts.py  test_quality.py  test_research_features.py  test_standard.py
web/: app.py
